--- a/myapp/templates/student_login.html
+++ b/myapp/templates/student_login.html
@@ -1,14 +1,25 @@
-<form method="POST">
-    {% csrf_token %}
-    <label>Name: </label><br>
-    <input type="text" name="name" required><br><br>
+{% extends "base.html" %}
 
-    <label>Password:</label><br>
-    <input type="password" name="password" required><br><br>
-
-    <button type="submit"> Login </button>
-
-    {%if error%}
-        <p style="color:red;">{{ error }}</p>
-    {% endif %}
-</form>
+{% block content %}
+<div class="card">
+    <h2>Student Login</h2>
+    <p class="muted">Enter the name and password provided by your administrator.</p>
+    <form method="POST">
+        {% csrf_token %}
+        <div class="stack">
+            <div>
+                <label>Name</label>
+                <input type="text" name="name" required placeholder="Your name">
+            </div>
+            <div>
+                <label>Password</label>
+                <input type="password" name="password" required placeholder="Password">
+            </div>
+            <button class="btn" type="submit">Login</button>
+        </div>
+        {% if error %}
+            <p style="color:#f87171; margin-top:8px;">{{ error }}</p>
+        {% endif %}
+    </form>
+</div>
+{% endblock %}
